# ethkai

./: .gitignore  Cargo.toml  README.md
crates/ethers-rs-abigen-types/: Cargo.toml
crates/ethers-rs-abigen-types/src/: lib.rs
crates/ethers-rs-abigen-types/src/eth/: uniswap.rs
crates/ethers-rs-abigen-types/src/eth/uniswap/: V2.rs
crates/ethers-rs-core/: .gitignore  Cargo.toml  configs.txt
crates/ethers-rs-core/src/: consts.rs  lib.rs  lp_types.rs  macros.rs  main.rs  txns.rs
crates/ethers-rs-core/src/abigen/contracts/: uniswap.rs
crates/ethers-rs-core/src/safekeep/: _types_20072023.rs  main copy.rs
crates/ethers-rs-core/src/txns/: decode.rs  types.rs
crates/ethers-rs-core/tests/: decode.rs
crates/ethers-rs-declare-macro/: Cargo.toml
crates/ethers-rs-declare-macro/src/: lib.rs  macros.rs
crates/ethers-rs-proc-macro/: Cargo.toml
crates/ethers-rs-proc-macro/src/: chainsgen.rs  lib.rs  structsgen.rs
crates/ethers-rs-proc-macro/tests/: structsgen.rs
crates/ethers-rs-test/: Cargo.toml  chain_ids.csv  chain_ids_new.csv  impl_tokens.csv
crates/ethers-rs-test/src/: main copy.rs  main.rs
crates/ethers-rs-types/: Cargo.toml
crates/ethers-rs-types/src/: error.rs  lib.rs  wallet.rs
crates/ethers-rs-types/src/init/: types.rs
crates/ethers-rs-types/src/wallet/: chain_id.rs
crates/ethkai-init/: Cargo.toml
crates/ethkai-init/src/: https.rs  lib.rs  ws.rs
crates/ethkai-init/src/io/: utils.rs
dev-docs/: learnings.md
