
[workspace]
resolver = "2"
members = [
    "crates/ethers-rs-core", 
    "crates/ethers-rs-proc-macro",
    "crates/ethers-rs-declare-macro",
    "crates/ethers-rs-test",
    "crates/ethers-rs-abigen-types",
    "crates/ethers-rs-types",
    "crates/ethkai-init",
]

[workspace.package]
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace-dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = "1.28.1"
anyhow = "1.0.69"
serde = { version = "1.0.159", features = ["derive"] }
lazy_static = "1.4.0"
text-colorizer = "1.0.0"
fastcrypto = "0.1.4"
base64 = "0.21.0"
rayon = "1.7.0"
futures = "0.3.28"
itertools = "0.10.5"
secrecy = "0.8.0"
url = "2.3.1"
dotenv = "0.15.0"
colored = "2.0.0"
reqwest = "0.11.18"
enum_dispatch = "0.3.11"
thiserror = "1.0.40"
async-once-cell = "0.5.2"
once_cell = "1.18.0"
tracing = "0.1.37"
ethers_literal = { path = "crates/ethers-literal", version = "0.1.0" }
ethers-rs-utils-core = { path = "crates/ethers-rs-core", version = "0.0.1" }
