[package]
name = "ethers-rs-abigen-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-literal = { git = "https://github.com/jymchng/ethers-literal.git" }
ethers = { version = "2.0", features = ["ws"] }
serde = { version = "1.0.165", features = ["derive"] }