[package]
name = "ethers-rs-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# # if you give a name here, e.g. name = "lib", then when 'importing' rust crates, have to use the name, e.g. use lib::etc, if no
# # name is given here, then name = <name of package>, e.g. name = "ether_rs_utils" and when importing rust crates, e.g. in main.rs, it will be
# # use ether_rs_utils::etc.
# path = "src/lib.rs"

[[bin]]
name = "ethers-rs-utils"
path = "src/main.rs"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
anyhow = "1.0.69"
serde = { version = "1.0.159", features = ["derive"] }
lazy_static = "1.4.0"
fastcrypto = "0.1.4"
base64 = "0.21.0"
rayon = "1.7.0"
futures = "0.3.28"
itertools = "0.10.5"
secrecy = "0.8.0"
url = "2.3.1"
dotenv = "0.15.0"
reqwest = "0.11.18"
enum_dispatch = "0.3.11"
thiserror = "1.0.40"
async-once-cell = "0.5.2"
once_cell = "1.18.0"
tracing = "0.1.37"
ethers-literal = { git = "https://github.com/jymchng/ethers-literal.git" }
async-trait = "0.1.70"
ethers-rs-proc-macro = { path = "../ethers-rs-proc-macro" }
ethers-rs-abigen-types = { path = "../ethers-rs-abigen-types" }
ethers-rs-types = { path = "../ethers-rs-types" }
ethkai-init = { path = "../ethkai-init" }