[package]
name = "ethers-rs-declare-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
proc-macro2 = "1.0.63"
quote = "1.0.29"
serde = { version = "1.0.165", features = ["derive"] }
syn = { version = "2.0.23", features = ["extra-traits"] }
ethers-literal = { git = "https://github.com/jymchng/ethers-literal.git" }
ethers = { version = "2.0", features = ["ws"] }