[package]
name = "ethers-rs-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

# [[bin]]
# name = 'ethers-rs-proc-macro'
# path = "src/main.rs"

[dependencies]
csv = "1.2.2"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.23", features = ["extra-traits"] }
serde = { version = "1.0.165", features = ["derive"] }
ethers-literal = { git = "https://github.com/jymchng/ethers-literal.git" }
ethers = { version = "2.0", features = ["ws"] }
enum_dispatch = "0.3.11"
async-trait = "0.1.70"
async-once-cell = "0.5.2"
once_cell = "1.18.0"

ethkai-init = { path = "../ethkai-init" }
ethers-rs-declare-macro = { path = "../ethers-rs-declare-macro" }
ethers-rs-abigen-types = { path = "../ethers-rs-abigen-types" }
ethers-rs-types = { path = "../ethers-rs-types" }