[package]
name = "ethers-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
proc-macro2 = "1.0.63"
quote = "1.0.29"
serde = { version = "1.0.165", features = ["derive"] }
syn = { version = "2.0.23", features = ["extra-traits"] }
ethers-literal = { git = "https://github.com/jymchng/ethers-literal.git" }
ethers = { version = "2.0", features = ["ws"] }
ethers-rs-declare-macro = { path = "../ethers-rs-declare-macro" }
ethers-rs-proc-macro = { path = "../ethers-rs-proc-macro" }
ethers-rs-abigen-types = { path = "../ethers-rs-abigen-types" }
ethers-rs-types = { path = "../ethers-rs-types" }
ethkai-init = { path = "../ethkai-init" }
ethers-rs-core = { path = "../ethers-rs-core" }
async-trait = "0.1.70"
enum_dispatch = "0.3.11"
async-once-cell = "0.5.2"
once_cell = "1.18.0"
anyhow = "1.0.71"
