[package]
name = "ethers-rs-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.8"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive", "serde_derive"] }
colored = "2.0.0"
text-colorizer = "1.0.0"
thiserror = "1.0.43"
