[package]
name = "ethkai-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
ethers = { version = "2.0", features = ["ws"] }
ethers-rs-types = { path = "../ethers-rs-types" }
secrecy = "0.8.0"
async-once-cell = "0.5.2"
once_cell = "1.18.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
url = "2.3.1"